--- a/package.json
+++ b/package.json
@@ -18,7 +18,15 @@
   },
   "homepage": "https://github.com/osmbe/road-completion#readme",
   "dependencies": {
+    "@mapbox/geojson-normalize": "0.0.1",
+    "@mapbox/tile-reduce": "^3.3.0",
+    "@turf/boolean-within": "^6.0",
     "@turf/buffer": "^5.1.5",
+    "@turf/difference": "^5.1",
+    "@turf/flatten": "^5.1.5",
+    "@turf/helpers": "^5.1",
+    "@turf/meta": "^5.2",
+    "@turf/union": "^5.1",
     "event-stream": "^4.0.1",
     "jsonstream-next": "^3.0.0"
   },
