👷 Update belgium.yml

--- a/.github/workflows/belgium.yml
+++ b/.github/workflows/belgium.yml
@@ -18,7 +18,7 @@ jobs:
           git clone https://github.com/mapbox/tippecanoe.git
           cd tippecanoe
           make -j
-          make install
+          sudo make install
       - name: Run process
         run: sh data/belgium/openstreetmap.sh
       - name: Upload OpenStreetMap buffers
