--- a/.github/workflows/belgium.yml
+++ b/.github/workflows/belgium.yml
@@ -12,7 +12,13 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Install GDAL
-        run: sudo apt install gdal-bin
+        run: |
+          wget https://github.com/OSGeo/gdal/releases/download/v3.1.3/gdal-3.1.3.tar.gz
+          tar -xf gdal-3.1.3.tar.gz
+          cd gdal-3.1.3
+          ./configure
+          make
+          sudo make install
       - name: Install Tippecanoe
         run: |
           git clone https://github.com/mapbox/tippecanoe.git
