--- a/.github/workflows/belgium.yml
+++ b/.github/workflows/belgium.yml
@@ -15,10 +15,11 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install GDAL
         run: |
+          sudo apt install libproj-dev libsqlite3-dev
           wget https://github.com/OSGeo/gdal/releases/download/v3.1.3/gdal-3.1.3.tar.gz
           tar -xf gdal-3.1.3.tar.gz
           cd gdal-3.1.3
-          ./configure
+          ./configure --with-sqlite3
           make
           sudo make install
       - name: Install Tippecanoe
