--- a/.github/workflows/belgium.yml
+++ b/.github/workflows/belgium.yml
@@ -49,6 +49,28 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Install PROJ
+        run: |
+          wget https://download.osgeo.org/proj/proj-7.1.1.tar.gz
+          tar -xf proj-7.1.1.tar.gz
+          cd proj-7.1.1
+          ./configure
+          make
+          sudo make install
+      - name: Install GDAL
+        run: |
+          wget https://github.com/OSGeo/gdal/releases/download/v3.1.3/gdal-3.1.3.tar.gz
+          tar -xf gdal-3.1.3.tar.gz
+          cd gdal-3.1.3
+          ./configure
+          make
+          sudo make install
+      - name: Install Tippecanoe
+        run: |
+          git clone https://github.com/mapbox/tippecanoe.git
+          cd tippecanoe
+          make -j
+          sudo make install
       - name: Download OpenStreetMap buffers
         uses: actions/download-artifact@v2
         with:
