--- a/.github/workflows/belgium.yml
+++ b/.github/workflows/belgium.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: Install PROJ
         run: |
+          apt install libcurl4-gnutls-dev
           wget https://download.osgeo.org/proj/proj-7.1.1.tar.gz
           tar -xf proj-7.1.1.tar.gz
           cd proj-7.1.1
