--- a/.github/workflows/belgium.yml
+++ b/.github/workflows/belgium.yml
@@ -2,34 +2,37 @@ name: 🇧🇪 Belgium
 
 on:
   push:
-    branches: [master]
-  schedule:
-    - cron: '0 0 * * *'
+    paths:
+      - data/belgium
+      - .github/workflows/belgium.yml
+  # schedule:
+  #   - cron: '0 0 * * *'
 
 jobs:
 
   openstreetmap-buffers:
     name: Generate OpenStreetMap buffers
     runs-on: ubuntu-latest
+    container: osgeo/gdal
     steps:
       - uses: actions/checkout@v2
-      - name: Install PROJ
-        run: |
-          sudo apt install libcurl4-gnutls-dev
-          wget https://download.osgeo.org/proj/proj-7.1.1.tar.gz
-          tar -xf proj-7.1.1.tar.gz
-          cd proj-7.1.1
-          ./configure
-          make
-          sudo make install
-      - name: Install GDAL
-        run: |
-          wget https://github.com/OSGeo/gdal/releases/download/v3.1.3/gdal-3.1.3.tar.gz
-          tar -xf gdal-3.1.3.tar.gz
-          cd gdal-3.1.3
-          ./configure
-          make
-          sudo make install
+      # - name: Install PROJ
+      #   run: |
+      #     sudo apt install libcurl4-gnutls-dev
+      #     wget https://download.osgeo.org/proj/proj-7.1.1.tar.gz
+      #     tar -xf proj-7.1.1.tar.gz
+      #     cd proj-7.1.1
+      #     ./configure
+      #     make
+      #     sudo make install
+      # - name: Install GDAL
+      #   run: |
+      #     wget https://github.com/OSGeo/gdal/releases/download/v3.1.3/gdal-3.1.3.tar.gz
+      #     tar -xf gdal-3.1.3.tar.gz
+      #     cd gdal-3.1.3
+      #     ./configure
+      #     make
+      #     sudo make install
       - name: Install Tippecanoe
         run: |
           git clone https://github.com/mapbox/tippecanoe.git
@@ -48,24 +51,25 @@ jobs:
     name: Generate difference for Flanders
     needs: openstreetmap-buffers
     runs-on: ubuntu-latest
+    container: osgeo/gdal
     steps:
       - uses: actions/checkout@v2
-      - name: Install PROJ
-        run: |
-          wget https://download.osgeo.org/proj/proj-7.1.1.tar.gz
-          tar -xf proj-7.1.1.tar.gz
-          cd proj-7.1.1
-          ./configure
-          make
-          sudo make install
-      - name: Install GDAL
-        run: |
-          wget https://github.com/OSGeo/gdal/releases/download/v3.1.3/gdal-3.1.3.tar.gz
-          tar -xf gdal-3.1.3.tar.gz
-          cd gdal-3.1.3
-          ./configure
-          make
-          sudo make install
+      # - name: Install PROJ
+      #   run: |
+      #     wget https://download.osgeo.org/proj/proj-7.1.1.tar.gz
+      #     tar -xf proj-7.1.1.tar.gz
+      #     cd proj-7.1.1
+      #     ./configure
+      #     make
+      #     sudo make install
+      # - name: Install GDAL
+      #   run: |
+      #     wget https://github.com/OSGeo/gdal/releases/download/v3.1.3/gdal-3.1.3.tar.gz
+      #     tar -xf gdal-3.1.3.tar.gz
+      #     cd gdal-3.1.3
+      #     ./configure
+      #     make
+      #     sudo make install
       - name: Install Tippecanoe
         run: |
           git clone https://github.com/mapbox/tippecanoe.git
