--- a/.github/workflows/belgium.yml
+++ b/.github/workflows/belgium.yml
@@ -5,6 +5,9 @@ on:
     paths:
       - data/belgium
       - .github/workflows/belgium.yml
+    pull_request:
+      - data/belgium
+      - .github/workflows/belgium.yml
   # schedule:
   #   - cron: '0 0 * * *'
 
@@ -13,26 +16,8 @@ jobs:
   openstreetmap-buffers:
     name: Generate OpenStreetMap buffers
     runs-on: ubuntu-latest
-    # container: osgeo/gdal
     steps:
       - uses: actions/checkout@v2
-      # - name: Install PROJ
-      #   run: |
-      #     sudo apt install libcurl4-gnutls-dev
-      #     wget https://download.osgeo.org/proj/proj-7.1.1.tar.gz
-      #     tar -xf proj-7.1.1.tar.gz
-      #     cd proj-7.1.1
-      #     ./configure
-      #     make
-      #     sudo make install
-      # - name: Install GDAL
-      #   run: |
-      #     wget https://github.com/OSGeo/gdal/releases/download/v3.1.3/gdal-3.1.3.tar.gz
-      #     tar -xf gdal-3.1.3.tar.gz
-      #     cd gdal-3.1.3
-      #     ./configure
-      #     make
-      #     sudo make install
       - name: Install GDAL
         run: sudo apt install gdal-bin
       - name: Install Tippecanoe
@@ -41,10 +26,21 @@ jobs:
           cd tippecanoe
           make -j
           sudo make install
-      - name: Run process
+      - name: Download Belgium extract
+        run: wget https://download.geofabrik.de/europe/belgium-latest.osm.pbf
+      - name: Convert to GeoJSON
         run: |
-          npm install
-          sh data/belgium/openstreetmap.sh
+          ogr2ogr -f "GeoJSON" -progress \
+            -select "name,highway" \
+            -where "highway is not null" \
+            "./belgium.geojson" \
+            "./belgium-latest.osm.pbf" "lines"
+      - name: Install dependencies
+        run: npm install
+      - name: Generate buffer
+        run: node "script/buffer.js" "./belgium.geojson" "belgium-buffer.geojson"
+      - name: Generate vector tiles
+        run: tippecanoe --force --output="./belgium-buffers.mbtiles" "./belgium-buffers.geojson" --layer="buffers" --no-feature-limit --no-tile-size-limit
       - name: Upload OpenStreetMap buffers
         uses: actions/upload-artifact@v2
         with:
@@ -55,25 +51,8 @@ jobs:
     name: Generate difference for Flanders
     needs: openstreetmap-buffers
     runs-on: ubuntu-latest
-    # container: osgeo/gdal
     steps:
       - uses: actions/checkout@v2
-      # - name: Install PROJ
-      #   run: |
-      #     wget https://download.osgeo.org/proj/proj-7.1.1.tar.gz
-      #     tar -xf proj-7.1.1.tar.gz
-      #     cd proj-7.1.1
-      #     ./configure
-      #     make
-      #     sudo make install
-      # - name: Install GDAL
-      #   run: |
-      #     wget https://github.com/OSGeo/gdal/releases/download/v3.1.3/gdal-3.1.3.tar.gz
-      #     tar -xf gdal-3.1.3.tar.gz
-      #     cd gdal-3.1.3
-      #     ./configure
-      #     make
-      #     sudo make install
       - name: Install GDAL
         run: sudo apt install gdal-bin
       - name: Install Tippecanoe
