--- a/.github/workflows/belgium.yml
+++ b/.github/workflows/belgium.yml
@@ -37,7 +37,7 @@ jobs:
             "belgium-latest.osm.pbf" "lines"
       - name: Install dependencies
         run: npm install
-      - name: Generate buffer
+      - name: Generate buffers
         run: node "script/buffer.js" "belgium.geojson" "belgium-buffers.geojson"
       - name: Generate vector tiles
         run: tippecanoe --force --output="belgium-buffers.mbtiles" "belgium-buffers.geojson" --layer="buffers" --no-feature-limit --no-tile-size-limit
@@ -65,18 +65,40 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: OpenStreetMap-Belgium-Buffers
-          path: data/belgium/belgium-buffers.mbtiles
-      - name: Run process
+          path: belgium-buffers.mbtiles
+      - name: Install dependencies
+        run: npm install
+      - name: Download & Unzip data
         run: |
-          npm install
-          sh data/belgium/flanders/process.sh
+          wget "https://downloadagiv.blob.core.windows.net/wegenregister/Wegenregister_SHAPE_20200917.zip"
+          unzip "Wegenregister_SHAPE_20200917.zip"
+      - name: Convert to GeoJSON
+        run: |
+          ogr2ogr -f "GeoJSON" -progress \
+            --config SHAPE_ENCODING "ISO-8859-1" \
+            -s_srs "EPSG:31370" -t_srs "EPSG:4326" \
+            -sql "@filter.sql" \
+            -lco COORDINATE_PRECISION=6 \
+            "Wegsegment.geojson" \
+            "Shapefile/Wegsegment.shp"
+      - name: Convert fields to OpenStreetMap tags
+        run: node "script/convert-tags.js" "Wegsegment.geojson" "WegsegmentTagged.geojson"
+      - name: Generate buffers
+        run: node "script/buffer.js" "WegsegmentTagged.geojson" "WegsegmentBuffers.geojson"
+      - name: Generate vector tiles
+        run: |
+          tippecanoe --force --no-feature-limit --no-tile-size-limit \
+            --maximum-zoom=14 --minimum-zoom=14 \
+            --output="WegsegmentTagged.mbtiles" "WegsegmentTagged.geojson" --layer="roads"
+      - name: Difference
+        run: node "script/difference.js" "WegsegmentTagged.mbtiles" "belgium-buffers.mbtiles"
       - name: Upload difference
         uses: actions/upload-artifact@v2
         with:
           name: Flanders-Difference
-          path: data/belgium/flanders/process/notWithin.geojson
+          path: notWithin.geojson
       - name: Upload statistics
         uses: actions/upload-artifact@v2
         with:
           name: Flanders-Statistics
-          path: data/belgium/flanders/process/stats.json
+          path: stats.json
