--- a/.github/workflows/belgium.yml
+++ b/.github/workflows/belgium.yml
@@ -5,9 +5,11 @@ on:
     paths:
       - data/belgium
       - .github/workflows/belgium.yml
+      - script/**/*.ts
     pull_request:
       - data/belgium
       - .github/workflows/belgium.yml
+      - script/**/*.ts
   # schedule:
   #   - cron: '0 0 * * *'
 
