--- a/.github/workflows/belgium.yml
+++ b/.github/workflows/belgium.yml
@@ -105,11 +105,11 @@ jobs:
             --buffer=0 \
             --maximum-zoom=14 --minimum-zoom=14 \
             --output="WegsegmentTagged.mbtiles" "WegsegmentTagged.geojson" --layer="roads"
-      - name: Download OpenStreetMap buffers
-        uses: actions/download-artifact@v2
-        with:
-          name: OpenStreetMap-Belgium-Buffers
-          path: belgium-buffers.mbtiles
+      # - name: Download OpenStreetMap buffers
+      #   uses: actions/download-artifact@v2
+      #   with:
+      #     name: OpenStreetMap-Belgium-Buffers
+      #     path: belgium-buffers.mbtiles
       - name: Difference
         run: node "script/difference.js" "WegsegmentTagged.mbtiles" "belgium-buffers.mbtiles"
       - name: Upload difference
