--- a/.github/workflows/belgium.yml
+++ b/.github/workflows/belgium.yml
@@ -5,75 +5,58 @@ on:
     paths:
       - data/belgium
       - .github/workflows/belgium.yml
+      - script/**/*.ts
+    pull_request:
+      - data/belgium
+      - .github/workflows/belgium.yml
+      - script/**/*.ts
   # schedule:
   #   - cron: '0 0 * * *'
 
 jobs:
 
-  openstreetmap-buffers:
-    name: Generate OpenStreetMap buffers
-    runs-on: ubuntu-latest
-    # container: osgeo/gdal
-    steps:
-      - uses: actions/checkout@v2
-      # - name: Install PROJ
-      #   run: |
-      #     sudo apt install libcurl4-gnutls-dev
-      #     wget https://download.osgeo.org/proj/proj-7.1.1.tar.gz
-      #     tar -xf proj-7.1.1.tar.gz
-      #     cd proj-7.1.1
-      #     ./configure
-      #     make
-      #     sudo make install
-      # - name: Install GDAL
-      #   run: |
-      #     wget https://github.com/OSGeo/gdal/releases/download/v3.1.3/gdal-3.1.3.tar.gz
-      #     tar -xf gdal-3.1.3.tar.gz
-      #     cd gdal-3.1.3
-      #     ./configure
-      #     make
-      #     sudo make install
-      - name: Install GDAL
-        run: sudo apt install gdal-bin
-      - name: Install Tippecanoe
-        run: |
-          git clone https://github.com/mapbox/tippecanoe.git
-          cd tippecanoe
-          make -j
-          sudo make install
-      - name: Run process
-        run: |
-          npm install
-          sh data/belgium/openstreetmap.sh
-      - name: Upload OpenStreetMap buffers
-        uses: actions/upload-artifact@v2
-        with:
-          name: OpenStreetMap-Belgium-Buffers
-          path: data/belgium/belgium-buffers.mbtiles
+  # openstreetmap-buffers:
+  #   name: Generate OpenStreetMap buffers
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - name: Install GDAL
+  #       run: sudo apt install gdal-bin
+  #     - name: Install Tippecanoe
+  #       run: |
+  #         git clone https://github.com/mapbox/tippecanoe.git
+  #         cd tippecanoe
+  #         make -j
+  #         sudo make install
+  #     - name: Download Belgium extract
+  #       run: wget https://download.geofabrik.de/europe/belgium-latest.osm.pbf
+  #     - name: Convert to GeoJSON
+  #       run: |
+  #         ogr2ogr -f "GeoJSON" -progress \
+  #           -select "name,highway" \
+  #           -where "highway is not null" \
+  #           "belgium.geojson" \
+  #           "belgium-latest.osm.pbf" "lines"
+  #     - name: Install dependencies
+  #       run: npm install
+  #     - name: Build
+  #       run: npm run build
+  #     - name: Generate buffers
+  #       run: node "script/buffer.js" "belgium.geojson" "belgium-buffers.geojson"
+  #     - name: Generate vector tiles
+  #       run: tippecanoe --force --output="belgium-buffers.mbtiles" "belgium-buffers.geojson" --layer="buffers" --no-feature-limit --no-tile-size-limit
+  #     - name: Upload OpenStreetMap buffers
+  #       uses: actions/upload-artifact@v2
+  #       with:
+  #         name: OpenStreetMap-Belgium-Buffers
+  #         path: belgium-buffers.mbtiles
 
   flanders-diff:
     name: Generate difference for Flanders
-    needs: openstreetmap-buffers
+    # needs: openstreetmap-buffers
     runs-on: ubuntu-latest
-    # container: osgeo/gdal
     steps:
       - uses: actions/checkout@v2
-      # - name: Install PROJ
-      #   run: |
-      #     wget https://download.osgeo.org/proj/proj-7.1.1.tar.gz
-      #     tar -xf proj-7.1.1.tar.gz
-      #     cd proj-7.1.1
-      #     ./configure
-      #     make
-      #     sudo make install
-      # - name: Install GDAL
-      #   run: |
-      #     wget https://github.com/OSGeo/gdal/releases/download/v3.1.3/gdal-3.1.3.tar.gz
-      #     tar -xf gdal-3.1.3.tar.gz
-      #     cd gdal-3.1.3
-      #     ./configure
-      #     make
-      #     sudo make install
       - name: Install GDAL
         run: sudo apt install gdal-bin
       - name: Install Tippecanoe
@@ -82,22 +65,58 @@ jobs:
           cd tippecanoe
           make -j
           sudo make install
-      - name: Download OpenStreetMap buffers
-        uses: actions/download-artifact@v2
-        with:
-          name: OpenStreetMap-Belgium-Buffers
-          path: data/belgium/belgium-buffers.mbtiles
-      - name: Run process
+      - name: Install dependencies
+        run: npm install
+      - name: Build
+        run: npm run build
+      - name: Download Belgium extract
+        run: wget https://download.geofabrik.de/europe/belgium-latest.osm.pbf
+      - name: Convert to GeoJSON
         run: |
-          npm install
-          sh data/belgium/flanders/process.sh
+          ogr2ogr -f "GeoJSON" -progress \
+            -select "name,highway" \
+            -where "highway is not null" \
+            "belgium.geojson" \
+            "belgium-latest.osm.pbf" "lines"
+      - name: Generate buffers
+        run: node "script/buffer.js" "belgium.geojson" "belgium-buffers.geojson"
+      - name: Generate vector tiles
+        run: tippecanoe --force --output="belgium-buffers.mbtiles" "belgium-buffers.geojson" --layer="buffers" --no-feature-limit --no-tile-size-limit
+      - name: Download & Unzip data
+        run: |
+          wget "https://downloadagiv.blob.core.windows.net/wegenregister/Wegenregister_SHAPE_20200917.zip"
+          unzip "Wegenregister_SHAPE_20200917.zip"
+      - name: Convert to GeoJSON
+        run: |
+          ogr2ogr -f "GeoJSON" -progress \
+            --config SHAPE_ENCODING "ISO-8859-1" \
+            -s_srs "EPSG:31370" -t_srs "EPSG:4326" \
+            -sql "@data/belgium/flanders/filter.sql" \
+            -lco COORDINATE_PRECISION=6 \
+            "Wegsegment.geojson" \
+            "Shapefile/Wegsegment.shp"
+      - name: Convert fields to OpenStreetMap tags
+        run: node "script/convert-tags.js" -c "data/belgium/flanders/convert.json" "Wegsegment.geojson" "WegsegmentTagged.geojson"
+      - name: Generate vector tiles
+        run: |
+          tippecanoe --force --no-feature-limit --no-tile-size-limit \
+            --buffer=0 \
+            --maximum-zoom=14 --minimum-zoom=14 \
+            --output="WegsegmentTagged.mbtiles" "WegsegmentTagged.geojson" --layer="roads"
+      # - name: Download OpenStreetMap buffers
+      #   uses: actions/download-artifact@v2
+      #   with:
+      #     name: OpenStreetMap-Belgium-Buffers
+      #     path: belgium-buffers.mbtiles
+      - name: Difference
+        run: node "script/difference.js" "WegsegmentTagged.mbtiles" "belgium-buffers.mbtiles"
       - name: Upload difference
         uses: actions/upload-artifact@v2
         with:
           name: Flanders-Difference
-          path: data/belgium/flanders/process/notWithin.geojson
+          path: notWithin.geojson
       - name: Upload statistics
         uses: actions/upload-artifact@v2
         with:
           name: Flanders-Statistics
-          path: data/belgium/flanders/process/stats.json
+          path: stats.json
