--- a/.github/workflows/belgium-flanders.yml
+++ b/.github/workflows/belgium-flanders.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Install GDAL
         run: sudo apt install gdal-bin
       - name: Install Tippecanoe
-        uses: ./.github/actions/install-tippecanoe
+        uses: ./.github/actions/install-tippecanoe.yml
       - name: Install dependencies
         run: npm install
       - name: Build
