--- a/.github/actions/install-tippecanoe/action.yml
+++ b/.github/actions/install-tippecanoe/action.yml
@@ -6,6 +6,10 @@ runs:
   using: "composite"
   steps:
     - run: git clone https://github.com/mapbox/tippecanoe.git
+      shell: bash
     - run: cd tippecanoe
+      shell: bash
     - run: make -j
+      shell: bash
     - run: sudo make install
+      shell: bash
