--- a/.github/actions/maproulette-buffers/action.yml
+++ b/.github/actions/maproulette-buffers/action.yml
@@ -10,5 +10,7 @@ runs:
   steps:
     - name: Download MapRoulette false positive
       run: wget -O "maproulette.geojson" "https://maproulette.org/api/v2/challenge/view/${{ inputs.challenge-id }}?status=2"
+      shell: bash
     - name: Generate MapRoulette buffers
       run: node "script/buffer.js" "maproulette.geojson" "maproulette-buffers.geojson"
+      shell: bash
