--- a/.github/workflows/belgium-brussels.yml
+++ b/.github/workflows/belgium-brussels.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Download & Unzip UrbIS data
         run: |
           wget "https://s.irisnet.be/v1/AUTH_ce3f7c74-fbd7-4b46-8d85-53d10d86904f/UrbAdm/UrbAdm_SHP.zip"
-          unzip "UrbAdm_SHP.zip"
+          unzip "UrbAdm_SHP.zip" "shp/UrbAdm_STREET_AXIS.*"
       - name: Convert (and filter) UrbIS to GeoJSON
         run: |
           ogr2ogr -f "GeoJSON" -progress \
